<resources>
    <string name="app_name">Night at the museum</string>
    <string name="no_network">Vui lòng kiểm tra lại kết nối và thử lại</string>
    <string name="server_time_out">Server không phản hồi</string>
    <string name="convert_response_error">Lỗi convert response từ server</string>
    <string name="response_error">Lỗi response</string>
    <string name="loading">Đang tải…!</string>
    <string name="explore_button">Khám phá bảo tàng</string>
    <string name="hello">Xin chào</string>
    <string name="manage_your_tiger_account">Quản lý tài khoản của bạn</string>
    <string name="achievement">Thành tích</string>
    <string name="collections">Bộ sưu tập</string>
    <string name="nearby">Gần đây</string>
    <string name="experiments">Thí nghiệm</string>
    <string name="your_data_in_app">Dữ liệu của bạn</string>
    <string name="settings">Cài đặt</string>
    <string name="feedback">Phản hồi</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="terms_of_service">Điều khoản dịch vụ</string>
    <string name="privacy_policy_terms_of_service">Chính sách bảo mật   •   Điều khoản dịch vụ</string>
    <string name="dot">•</string>
    <string name="tiger">Tiger</string>
    <string name="email_example">ghetnhungthangdattenvovan@gmail.com</string>
    <string name="full_name_example">Đoàn Thanh Sơn</string>
    <string name="home">Trang chủ</string>
    <string name="explore">Khám phá</string>
    <string name="favorite">Yêu thích</string>
    <string name="game">Trò chơi</string>
    <string name="download">Tải xuống</string>
    <string name="galleries">Thư viện</string>
    <string name="items">Mục</string>
    <string name="stories">Câu chuyện</string>
    <string name="stories_lower_case">câu chuyện</string>
    <string name="view_all">Xem tất cả</string>
    <string name="online_exhibit">triển lãm trực tuyến</string>
    <string name="input_user_name">Nhập tên đăng nhập</string>
    <string name="login">Đăng nhập</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="save_account">Lưu tài khoản</string>
    <string name="login3rd">Hoặc đăng nhập với</string>
    <string name="error_field_must_not_be_empty">Trường bắt buộc</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="password_again">Nhập lại mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="dont_have_account">Chưa có tài khoản?</string>
    <string name="have_account">Đã có tài khoản?</string>
    <string name="welcome_to_app">Chào mừng đến với Tiger Museum AR</string>
    <string name="account_does_not_exist">"Tài khoản không tồn tại"</string>
    <string name="wrong_password">"Sai mật khẩu"</string>
    <string name="sign_in_fail">Đăng nhập thất bại</string>
    <string name="please_wait">Vui lòng chờ…</string>
    <string name="undeveloped">Tính năng chưa phát triển.</string>
    <string name="password_not_match">Mật khẩu không khớp</string>
    <string name="email_empty">Vui lòng không để email trống</string>
    <string name="password_empty">Vui lòng không để mật khẩu trống</string>
    <string name="account_exist">Tài khoản đã tồn tại</string>
    <string name="sign_up_fail">Đăng ký thất bại</string>
    <string name="sign_up_success">Tạo tài khoản thành công</string>
    <string name="notifications">Thông báo</string>
    <string name="weekly_highlight">Nổi bật hàng tuần</string>
    <string name="weekly_highlight_description">Khám phá lựa chọn hàng đầu trong tuần của biên tập viên, từ các câu chuyện đến viện bảo tàng đến chế độ xem thu phóng</string>
    <string name="content_updates">Cập nhật nội dung</string>
    <string name="content_updates_description">Thông báo khi nội dung được thêm vào chủ đề và bộ sưu tập yêu thích của bạn</string>
    <string name="weekly_highlight_email_description">Khám phá tổng hợp các lựa chọn hàng đầu hàng tuần từ biên tập viên</string>
    <string name="special_announcement">Thông báo dịp đặc biệt</string>
    <string name="special_announcement_description">Cập nhật thông tin về các dự án và tính năng mới nhất từ Tiger Museum AR</string>
    <string name="emails">Emails</string>
    <string name="offline_content">Nội dung tải xuống</string>
    <string name="manage_offline_content">Quản lý nội dung tải xuống của bạn</string>
    <string name="manage_offline_description">Truy cập và xóa nội dung đã tải xuống trên thiết bị của bạn</string>
    <string name="about_app">Giới thiệu Night at the museum</string>
    <string name="about">Giới thiệu</string>
    <string name="open_source_license">Giấy phép nguồn mở</string>
    <string name="version_1">Phiên bản: 1.0.0</string>
    <string name="log_out">Đăng xuất</string>
    <string name="fail">Thất bại</string>
    <string name="create_a_gallery">Tạo một thư viện</string>
    <string name="create_a_gallery_desc">Nhóm tác phẩm nghệ thuật yêu thích của bạn thành các thư viện theo nghệ sĩ, đối tượng hoặc bất kỳ chủ đề nào bạn chọn</string>
    <string name="create_gallery">Tạo thư viện</string>
    <string name="buy_tickets">Mua vé</string>
    <string name="current_exhibition">Triển lãm đang diễn ra</string>
    <string name="exhibition_opening_soon">Triển lãm sắp khai mạc</string>
    <string name="zoom_in">Phóng to</string>
    <string name="view_in_ar">Augmented reality</string>
    <string name="street_view">Chế độ xem phố</string>
    <string name="read_more">Đọc thêm</string>
    <string name="details">Chi tiết</string>
    <string name="recommended">Gợi ý</string>
    <string name="navigate_to_another_panorama">navigate to another panorama</string>
    <string name="pan_camera">pan camera</string>
    <string name="tap_screen">tap screen</string>
    <string name="long_press_screen">long press screen</string>
    <string name="explore_with_street_view">Khám phá với chế độ xem phố</string>
    <string name="explore_with_street_view_desc">Từ hậu trường Nhà hát Opera Paris đến đỉnh Taj Mahal</string>
    <string name="follow_your_favorite">Theo dõi bộ sưu tập yêu thích</string>
    <string name="discover_collections">Khám phá các bộ sưu tập</string>
    <string name="visit">Tham quan</string>
    <string name="following">Đang theo dõi</string>
    <string name="follow">Theo dõi</string>
    <string name="all">Tất cả</string>
    <string name="az">A-Z</string>
    <string name="map">Bản đồ</string>
    <string name="collection_not_found">Không tìm thấy bộ sưu tập phù hợp.</string>
    <string name="no_data_found">Không tìm thấy dữ liệu!</string>
    <string name="please_try_again_later">Vui lòng thử lại vào lần sau.</string>
    <string name="ar_tutorial">Hướng máy ảnh của bạn xuống sàn và di chuyển vòng quanh để xác định mặt phẳng.</string>
    <string name="please_wait_for_render_model">Vui lòng chờ render mô hình…</string>
    <string name="close">Đóng</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="sure_delete_title">Xóa mô hình này?</string>
    <string name="confirm_delete_desc1">Bạn có chắc chắn muốn xóa mô hình</string>
    <string name="confirm_delete_desc_all">Bạn có chắc chắn muốn xóa toàn bộ mô hình trên mặt phẳng?</string>
    <string name="confirm_delete_desc2"> khỏi bộ nhớ thiết bị?</string>
    <string name="no_download_available">Bạn chưa tải xuống mô hình nào.</string>
    <string name="read_less">Rút gọn</string>
    <string name="recommended_for_you">Các mục gợi ý dành cho bạn</string>
    <string name="no_ticket_link">Không tìm thấy đường dẫn</string>
    <string name="search">Tìm kiếm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
