<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_70"
            android:background="@drawable/shape_rectange_blue_bg_corner_8"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/create_a_gallery"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_size_26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_6"
                android:layout_marginBottom="@dimen/dimen_10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/create_a_gallery_desc"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectange_transparent_bg_white_stroke_corner_2"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/dimen_10"
                android:text="@string/create_gallery"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_size_16" />

        </LinearLayout>

    </FrameLayout>

</layout>

