<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/flConfirmDeleteRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/black_overlay_strong">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvConfirmDeleteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dimen_30"
            app:cardCornerRadius="@dimen/dimen_corner_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginTop="@dimen/dimen_30"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/sure_delete_title"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/dimen_text_size_20" />

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/tvConfirmDeleteSize"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/dimen_text_size_16"
                    tools:text="16 MB" />

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/tvConfirmDeleteDesc"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginTop="@dimen/dimen_14"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/confirm_delete_desc1"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/dimen_text_size_16" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginBottom="@dimen/dimen_10">

                    <TextView
                        android:id="@+id/tvConfirmDeleteYes"
                        android:layout_width="@dimen/dimen_48"
                        android:layout_height="@dimen/dimen_48"
                        android:layout_marginEnd="@dimen/dimen_20"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/yes"
                        android:textAllCaps="true"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/dimen_text_size_16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvConfirmDeleteNo"
                        android:layout_width="@dimen/dimen_48"
                        android:layout_height="@dimen/dimen_48"
                        android:layout_marginEnd="@dimen/dimen_30"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textAllCaps="true"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/dimen_text_size_16"
                        app:layout_constraintEnd_toStartOf="@id/tvConfirmDeleteYes"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

</layout>
